components/ua/users-v1/overlays/prod/patch-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-office-web-service-v1
spec:
  template:
    spec:
      containers:
        - name: user-office-web-service
          # version: 1.6.5
          image: ghcr.io/isisbusapps/user-office-web-service@sha256:3b9cd1e469407f2ce18c79fd6406fd24434682e8c810797867fef5be85a95a90
