components/ua/users-v1/overlays/prod/patch-image.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-office-web-service-v1
spec:
  template:
    spec:
      containers:
        - name: user-office-web-service
          # version: 1.6.2
          image: ghcr.io/isisbusapps/user-office-web-service@sha256:f4a848130bbfe0b182d6a3106c48e76dd553e46f036a976ad0a1a023716f8c50
